  completely illiterate, but its definitely sub-optimal to "ensure" which is
  non-ambiguous.
- sql:
  - postgres no longer uses client-side cursors, uses more efficient server side 
  cursors via apparently undocumented psycopg2 behavior recently discovered on the 
  mailing list.  disable it via create_engine('postgres://', client_side_cursors=True)
  - added "fetchmany()" support to ResultProxy
  - added "BIGSERIAL" support for postgres table with PGBigInteger/autoincrement
  - fixes to postgres reflection to better handle when schema names are present;
  thanks to jason (at) ncsmags.com [ticket:402]
  - fix to correlation of subqueries when the column list of the select statement
  is constructed with individual calls to append_column(); this fixes an ORM
  bug whereby nested select statements were not getting correlated with the 
  main select generated by the Query object.
  - default "timezone" setting is now False.  this corresponds to Python's datetime
  behavior as well as Postgres' timestamp/time types (which is the only timezone-sensitive
  dialect at the moment) [ticket:414]
  - the "op()" function is now treated as an "operation", rather than a "comparison".
  the difference is, an operation produces a BinaryExpression from which further operations
  can occur whereas comparison produces the more restrictive BooleanExpression
- firebird:
  - order of constraint creation puts primary key first before all other constraints;
  required for firebird, not a bad idea for others [ticket:408]
  - Firebird fix to autoload multifield foreign keys [ticket:409]
  - Firebird NUMERIC type properly handles a type without precision [ticket:409]
- orm:
  - added a mutex to the mapper compilation step.  ive been reluctant to add any kind
  of threading anything to SA but this is one spot that its its really needed since mappers
  are typically "global", and while their state does not change during normal operation, the 