@@ -8,6 +8,8 @@
   - postgres no longer uses client-side cursors, uses more efficient server side 
   cursors via apparently undocumented psycopg2 behavior recently discovered on the 
   mailing list.  disable it via create_engine('postgres://', client_side_cursors=True)
+  - mysql is inconsistent with what kinds of quotes it uses in foreign keys during a
+  SHOW CREATE TABLE, reflection updated to accomodate for all three styles [ticket:420]
   - added "fetchmany()" support to ResultProxy
   - added "BIGSERIAL" support for postgres table with PGBigInteger/autoincrement
   - fixes to postgres reflection to better handle when schema names are present;
